gnome shell: fix issues in search content when scrollbars active

--- a/Midnight-Olive/gnome-shell/gnome-shell.css
+++ b/Midnight-Olive/gnome-shell/gnome-shell.css
@@ -1810,9 +1810,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 #searchResultsContent {
-  padding-left: 20px;
-  padding-right: 20px;
-  max-width: 1024px;
+  max-width: 1000px;
   spacing: 8px;
 }
 
@@ -2142,8 +2140,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   padding: 1px;
 }
 
-.all-apps,
-.frequent-apps > StBoxLayout {
+.all-apps {
   padding: 0px 88px 10px 88px;
 }
 
